# rust-minigrep

./: Cargo.toml  README.md  padme.txt  raymond-carver.txt
src/: config.rs  lib.rs  main.rs
tests/: search-test.rs
